tests/miniJava/neg/006831_mutation.MiniJava
class return { public static void Main ( String [ ] java ) { { } } }
